WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133633
Fix WebGL EXT_shader_texture_lod for iOS
https://bugs.webkit.org/show_bug.cgi?id=133633
Summary
Fix WebGL EXT_shader_texture_lod for iOS
Florian Bösch
Reported
2014-06-08 22:28:56 PDT
The WebGL extension EXT_shader_texture_lod which mirrors the ES Extension
http://www.khronos.org/registry/gles/extensions/EXT/EXT_shader_texture_lod.txt
may now be implemented. The functionality is also part of OpenGL ES 3.0. Chrome ticket:
https://code.google.com/p/chromium/issues/detail?id=344583
Firefox ticket:
https://bugzilla.mozilla.org/show_bug.cgi?id=965848
Attachments
Patch
(2.51 KB, patch)
2014-06-09 13:55 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2014-06-09 15:42 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2014-06-09 13:52:05 PDT
Changing title to reflect iOS. This was already implemented for other platforms in
https://bugs.webkit.org/show_bug.cgi?id=128985
Alex Christensen
Comment 2
2014-06-09 13:55:23 PDT
Created
attachment 232732
[details]
Patch
Alex Christensen
Comment 3
2014-06-09 15:42:26 PDT
Created
attachment 232739
[details]
Patch
WebKit Commit Bot
Comment 4
2014-06-09 16:33:02 PDT
Comment on
attachment 232739
[details]
Patch Clearing flags on attachment: 232739 Committed
r169730
: <
http://trac.webkit.org/changeset/169730
>
WebKit Commit Bot
Comment 5
2014-06-09 16:33:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug