[iOS WebGL] Fix EXT_shader_texture_lod. https://bugs.webkit.org/show_bug.cgi?id=133633

Patch by Alex Christensen <achristensen@webkit.org> on 2014-06-09
Reviewed by Brady Eidson.

Covered by the Khronos test (and in LayoutTests):
conformance/extensions/ext-shader-texture-lod.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getExtension):
(WebCore::WebGLRenderingContext::getSupportedExtensions):
Added shader texture lod name to match value from glGetString(GL_EXTENSIONS) on iOS.

Canonical link: https://commits.webkit.org/151641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169730 268f45cc-cd09-0410-ab3c-d52691b4dbfc